--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,35 +23,96 @@
 }
 
 body {
-    background-color: rgb(21, 21, 21);
+    background-color: rgb(10, 10, 10);
 }
 
 .header {
-  background-color: #8187c0;
-  position: relative;
-  top: 0;
-  height: 4rem;
+  /* background-color: #8187c0; */
+  position: sticky;
+  top: 1.2rem;
+  height: 3.6rem;
   z-index: 10;
+  max-width: 38vw;
+  margin: 0 auto;
 }
 
-.nav-bar {
+.navbar {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding-top: 1.3rem;
+  justify-content: space-between;
+  /* background-color: #181818; */
+  background-color: #8187c04c;
+  backdrop-filter: blur(10px);
+  padding: 10px 10px;
+  height: 3.6rem;
+  border-radius: 1rem;
 }
 
 .nav-links {
-  list-style-type: none;
   display: flex;
-  gap: 36px;
-  justify-content: center;
+  list-style: none;
 }
 
-.nav-links a{
+.nav-links li a {
   text-decoration: none;
-  color: black;
-  font-size: 18px;
+  color: #ccc;
+  font-size: 17px;
+  transition: color 0.3s ease;
+}
+
+.nav-links li:hover {
+  scale: 1.05;
+}
+
+.nav-links li a:hover {
+  color: #fff;
+}
+
+.contact-button {
+  background-color: #ff5722;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.8rem;
+  font-size: 17px;
+  transition: background-color 0.3s ease;
+}
+
+.contact-button:hover {
+  background-color: #e03a07;
+  scale: 1.05;
+}
+
+.nav-logo {
+  position: relative;
+  width: 2.8rem;
+  height: 2.8rem;
+  overflow: hidden;
+}
+
+.static {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  transition: opacity 0.3s ease;
+}
+
+.gif {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.nav-logo:hover .static {
+  opacity: 0;
+}
+
+.nav-logo:hover .gif {
+  opacity: 1;
 }
 
 .Home {
@@ -61,6 +122,63 @@ body {
   position: relative;
 }
 
-.About, .Projects, .Experience, .Contact {
+.About, .Projects, .Experience {
   min-height: 100vh;
+}
+
+.Skills, .Contact {
+  min-height: 80vh;
+}
+
+.container-loader {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.round {
+  width: 400px;
+  height: 400px;
+  border: 2px solid #8187c0;
+  border-radius: 46% 43% 47% 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: spin 4s linear infinite;
+}
+
+.round:nth-child(2) {
+  animation: spin 6s linear infinite reverse;
+  border-radius: 48% 50% 43% 47%;
+  opacity: 0.8;
+}
+
+.image-container {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #000;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hero-container {
+  border: 0.2rem solid #8187c0;
 }
